<resources>
    <string name="app_name">Navigatiion_Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_login">SpeakerZen</string>
    <string name="tv_social_message">Sign in with social networks</string>
    <string name="tv_information">Don"'"t have an account</string>
    <string name="tv_singup">Sign up?</string>
    <string name="amenities_title">Amenities</string>
    <string name="amenities_internet">Internet</string>
    <string name="amenities_breakfast">Breakfast</string>
    <string name="amenities_Handicap">Handicap Accesible</string>
    <string name="amenities_event">Suitable for event</string>
    <string name="amenities_parking">Free parking</string>
    <string name="wallet_title">Happy Wallet</string>
    <string name="wallet_message">Get Started in 5 Easy Step</string>
    <string name="wallet_signin_message">Login Or Create Your New Account</string>
    <string name="wallet_forgot">Forgot Your Password?</string>
    <string name="wallet_another_signin">Or Sign in With</string>
    <string name="dance_ticket">Ticket Name</string>
    <string name="dance_quantity">Quantity</string>
    <string name="dance_price">Price</string>
    <string name="dance_message">Banned Community Wisi Enim Minim Venium Community Enim</string>
    <string name="ticket">Vip Ticket</string>
    <string name="price">US $15</string>
    <string name="orvito_title">Orvito</string>
    <string name="orvito_name">Sarah</string>
    <string name="car_name">Lotus Transport</string>
    <string name="car_driver_title">Preferred Driver</string>
    <string name="car_driver_name">Utsav Shah</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_recycleview">RecycleviewActivity</string>
</resources>
