<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.utsav.navigatiion_drawer.DanceFragment">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_dance"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/michael" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_dance_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/dance_message"
        android:textColor="#ffffff" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_below="@id/iv_dance"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#B5B11D">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dance_ticket"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dance_price"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dance_quantity"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ticket"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_dance_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ibtn_dance_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:background="@drawable/plus" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_dance_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="1"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ibtn_dance_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:background="@drawable/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fa0000">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ticket"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_dance_price_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ibtn_dance_plus_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:background="@drawable/plus" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_dance_quantity_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="1"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ibtn_dance_minus_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:background="@drawable/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ticket"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_dance_price_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ibtn_dance_plus_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:background="@drawable/plus" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_dance_quantity_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="1"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ibtn_dance_minus_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:background="@drawable/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ticket"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_dance_price_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ibtn_dance_plus_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:background="@drawable/plus" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_dance_quantity_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".8"
                android:gravity="center"
                android:text="1"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/ibtn_dance_minus_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:background="@drawable/minus" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_dance_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="Total=0"
        android:textSize="20sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_dance_getticket"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_below="@id/layout"
        android:layout_marginStart="30dp"
        android:layout_toRightOf="@id/tv_dance_total"
        android:background="#00ff00"

        android:shadowColor="@color/colorPrimary"
        android:text="Get Tickets" />

</RelativeLayout>
